[package]
name = "hadorn-macro"
description = "A type-safe HTTP client for Rust"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = { version = "1.0" }
syn = { version = "2.0", features = ["full", "extra-traits", "parsing"] }
